--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,11 +4,11 @@
 		{
 			"type": "cppbuild",
 			"label": "C/C++: gcc.exe générer le fichier actif",
-			"command": "C:\\msys64\\mingw64\\bin\\gcc.exe",
+			"command": "C:\\MinGW\\bin\\gcc.exe",
 			"args": [
 				"-fdiagnostics-color=always",
 				"-g",
-					"-IC:\\msys64\\mingw64\\include\\gtk-3.0\\gtk",
+					"-IC:\\MinGW\\include\\gtk-3.0\\gtk",
 				"${file}",
 					"${fileDirname}\\fonctions.c",
 					"-lgtk-3",
@@ -16,13 +16,13 @@
 				"${fileDirname}\\${fileBasenameNoExtension}.exe"
 			],
 			"options": {
-				"cwd": "C:\\msys64\\mingw64\\bin"
+				"cwd": "C:\\MinGW\\bin"
 			},
 			"problemMatcher": [
 				"$gcc"
 			],
 			"group": "build",
-			"detail": "compilateur : C:\\msys64\\mingw64\\bin\\gcc.exe"
+			"detail": "compilateur : C:\\MinGW\\bin\\gcc.exe"
 		}
 	]
 }
